mass test replacements as old implementation didn't verify anything