@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.*;
 import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCaseDefinition.*;
-import static uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCaseDefinition.EMAIL;
 
 import java.util.*;
 import org.junit.jupiter.api.BeforeEach;
@@ -24,10 +23,7 @@ public class AppellantRemoveDetainedStatusPersonalisationSmsTest {
     @Mock
     AsylumCase asylumCase;
 
-    private Long caseId = 12345L;
-    private String smsTemplateId = "someSmsTemplateId";
-    private String mockedAppealReferenceNumber = "someReferenceNumber";
-    private String mockedAppellantMobilePhone = "07123456789";
+    private final String smsTemplateId = "someSmsTemplateId";
 
     private AppellantRemoveDetainedStatusPersonalisationSms appellantRemoveDetainedStatusPersonalisationSms;
 
@@ -47,17 +43,19 @@ public class AppellantRemoveDetainedStatusPersonalisationSmsTest {
 
     @Test
     public void should_return_given_reference_id() {
+        Long caseId = 12345L;
         assertEquals(caseId + "_REMOVE_DETENTION_STATUS_APPELLANT_SMS",
                 appellantRemoveDetainedStatusPersonalisationSms.getReferenceId(caseId));
     }
 
     @Test
     public void should_return_correct_recipient_mobile_number() {
-        List<String> mockedContactPreferences = new ArrayList<>(Arrays.asList("wantsSms"));
+        List<String> mockedContactPreferences = new ArrayList<>(List.of("wantsSms"));
 
         when(asylumCase.read(CONTACT_PREFERENCE_UN_REP))
                 .thenReturn(Optional.of(mockedContactPreferences));
 
+        String mockedAppellantMobilePhone = "07123456789";
         when(asylumCase.read(MOBILE_NUMBER, String.class))
                 .thenReturn(Optional.of(mockedAppellantMobilePhone));
 
@@ -67,7 +65,7 @@ public class AppellantRemoveDetainedStatusPersonalisationSmsTest {
 
     @Test
     public void should_return_empty_recipient_set_when_sms_contact_preference_not_chosen() {
-        List<String> mockedContactPreferences = new ArrayList<>(Arrays.asList());
+        List<String> mockedContactPreferences = new ArrayList<>(List.of());
 
         when(asylumCase.read(CONTACT_PREFERENCE_UN_REP))
                 .thenReturn(Optional.ofNullable(mockedContactPreferences));
@@ -80,12 +78,13 @@ public class AppellantRemoveDetainedStatusPersonalisationSmsTest {
 
     @Test
     public void should_return_personalisation_when_all_information_given() {
+        String mockedAppealReferenceNumber = "someReferenceNumber";
         when(asylumCase.read(APPEAL_REFERENCE_NUMBER, String.class))
                 .thenReturn(Optional.of(mockedAppealReferenceNumber));
         Map<String, String> personalisation =
                 appellantRemoveDetainedStatusPersonalisationSms.getPersonalisation(asylumCase);
 
-        assertEquals(mockedAppealReferenceNumber, personalisation.get("appealReferenceNumber"));
+            assertEquals(mockedAppealReferenceNumber, personalisation.get("appealReferenceNumber"));
     }
 
     @Test
@@ -93,6 +92,6 @@ public class AppellantRemoveDetainedStatusPersonalisationSmsTest {
         Map<String, String> personalisation =
                 appellantRemoveDetainedStatusPersonalisationSms.getPersonalisation(asylumCase);
 
-        assertEquals("", personalisation.get("appealReferenceNumber"));
+            assertEquals("", personalisation.get("appealReferenceNumber"));
     }
 }
